# yandex-metrika-mcp

./: .gitignore  LICENSE  README.md  README.ru.md  pyproject.toml
skills/yandex-metrika-analytics/: SKILL.md
src/yandex_metrika_mcp/: __init__.py  metrika.py  server.py
tests/: smoke_mcp.py  test_smoke_mcp.py
