[project]
name = "yandex-metrika-mcp"
version = "0.1.0"
description = "Read-only MCP server for Yandex Metrika"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",          # официальный SDK от Anthropic
    "pydantic>=2.0",       # типизация моделей
    "httpx>=0.27",         # HTTP-клиент (асинхронный, поддерживается)
    "python-dotenv>=1.0",  # опционально, для .env файла при локальной разработке
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/ShalomGH/yandex-metrika-mcp"
Repository = "https://github.com/ShalomGH/yandex-metrika-mcp"
Issues = "https://github.com/ShalomGH/yandex-metrika-mcp/issues"

[project.scripts]
yandex-metrika-mcp = "yandex_metrika_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yandex_metrika_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
